--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+<head>
+    <title>Roman Balayan | Github</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+    <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
+<body>
+
+<!-- Header -->
+<section id="header">
+    <header class="major">i
+        <h1>Roman Balayan</h1>
+        <p>Full-stack Web Developer</p>
+    </header>
+    <div class="container">
+        <ul class="actions">
+            <li><a href="#one" class="button special scrolly">Find out more</a></li>
+        </ul>
+    </div>
+</section>
+
+<!-- One -->
+<section id="one" class="main special">
+    <div class="container">
+        <span class="image fit primary"><img src="images/1.jpeg" alt="" /></span>
+        <div class="content">
+            <header class="major">
+                <h2>Few things about me</h2>
+            </header>
+            <p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+        </div>
+        <a href="#two" class="goto-next scrolly">Next</a>
+    </div>
+</section>
+
+<!-- Two -->
+<section id="two" class="main special">
+    <div class="container">
+        <div class="content">
+            <header class="major">
+                <h2>Tools I Work With</h2>
+            </header>
+            <p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+            <ul class="icons-grid">
+                <li>
+                    <i class="devicon-nodejs-plain custom-devicon nodejs"></i>
+                    <h3>NodeJS</h3>
+                </li>
+                <li>
+                    <i class="devicon-mongodb-plain custom-devicon mongodb"></i>
+                    <h3>MongoDB</h3>
+                </li>
+                <li>
+                    <i class="devicon-angularjs-plain custom-devicon angular"></i>
+                    <h3>AngularJS</h3>
+
+                <li>
+                    <i class="devicon-amazonwebservices-plain custom-devicon aws"></i>
+                    <h3>AWS</h3>
+                </li>
+                <li>
+                    <i class="devicon-atom-original custom-devicon electron"></i>
+                    <h3>Electron</h3>
+                </li>
+                <li>
+                    <i class="devicon-java-plain custom-devicon java"></i>
+                    <h3>Java</h3>
+                </li>
+            </ul>
+        </div>
+        <a href="#three" class="goto-next scrolly">Next</a>
+    </div>
+</section>
+
+<!-- Three -->
+<section id="three" class="main special">
+    <div class="container">
+        <div class="content">
+            <header class="major">
+                <h2>One last thing</h2>
+            </header>
+            <p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+        </div>
+        <a href="#footer" class="goto-next scrolly">Next</a>
+    </div>
+</section>
+
+<!-- Footer -->
+<section id="footer">
+    <div class="container">
+        <header class="major">
+            <h2>Contact Me</h2>
+        </header>
+        <form method="post" action="#">
+            <div class="row uniform">
+                <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" disabled /></div>
+                <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" disabled /></div>
+                <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4" disabled ></textarea></div>
+                <div class="12u$">
+                    <ul class="actions">
+                        <li><input type="submit" value="Send Message" class="special" disabled /></li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+    </div>
+    <footer>
+        <ul class="icons">
+            <li><a href="#" class="icon alt fa-linkedin"><span class="label">Linked In</span></a></li>
+            <li><a href="#" class="icon alt fa-github"><span class="label">Github</span></a></li>
+            <li><a href="#" class="icon alt fa-medium"><span class="label">Medium</span></a></li>
+        </ul>
+        <ul class="copyright">
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+            <li>Icons: <a href="http://devicon.fr/">Devicon</a></li>
+        </ul>
+    </footer>
+</section>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/js/main.js"></script>
+
+</body>
+</html>
